--- a/app/src/main/res/layout/fragment_shader.xml
+++ b/app/src/main/res/layout/fragment_shader.xml
@@ -2,10 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="#ffffff"
     android:layout_height="match_parent">
 
     <com.example.test.cavas.ui.shader.RoundAngleView
         android:id="@+id/text_notifications"
+        android:layout_width="match_parent"
+        android:background="@color/black_overlay"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.313"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.example.test.cavas.ui.shader.InvertedView
+        android:layout_width="match_parent"
+        android:background="@color/black_overlay"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.313"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.example.test.cavas.ui.shader.PathEffectView
         android:layout_width="match_parent"
         android:background="@color/black_overlay"
         android:layout_height="match_parent"
