--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,4 +27,9 @@
         android:name="com.example.test.cavas.ui.shader.ShaderFragment"
         android:label="@string/title_shader"
         tools:layout="@layout/fragment_porterduffxfermode" />
+    <fragment
+        android:id="@+id/navigation_surfaceview"
+        android:name="com.example.test.cavas.ui.shader.ShaderFragment"
+        android:label="@string/title_shader"
+        tools:layout="@layout/fragment_porterduffxfermode" />
 </navigation>
